# tutorials

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
examples/: borders  catboost_example.py  model.json  torch_nn.py  tree.dot
notebooks/: cateboost_nb.ipynb  custom_catboost.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv
notebooks/catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv
notebooks/catboost_info/fold-0/learn/: events.out.tfevents
notebooks/catboost_info/fold-0/test/: events.out.tfevents
notebooks/catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv
notebooks/catboost_info/fold-1/learn/: events.out.tfevents
notebooks/catboost_info/fold-1/test/: events.out.tfevents
notebooks/catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv
notebooks/catboost_info/fold-2/learn/: events.out.tfevents
notebooks/catboost_info/fold-2/test/: events.out.tfevents
notebooks/catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv
notebooks/catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
notebooks/outputs/catboost/: borders  model.json  transformed.csv  tree.dot
tests/: test_simple_nn.py
tutorials/lightning/: README.md  datamodule.py  main.py  train.py
tutorials/lightning/configs/: congif.toml
tutorials/python/: bin.py  custom_catboost_regressor.py  dataclasses_module.py  polars_module.py  pydantic_module.py
tutorials/python/EX1_dessign_patterns/: pyproject.toml
tutorials/python/EX1_dessign_patterns/configs/: app_config.toml
tutorials/python/EX1_dessign_patterns/dp/: appconfig.py  dataloaders.py
tutorials/python/EX1_dessign_patterns/models/: basemodel.py  catboost.py
tutorials/torch/: lightning.py  simple_nn.py
tutorials/utils/: utils.py
(+4 files in other folders)
