[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["Juan C Gonzalez Espitia <jues.carlos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8"
pandas = "^2.1"
qiskit = "^1.0"
scikit-learn = "^1.3"
scipy = "^1.13"
torch = "2.0"
pytorch_lightning = "^2.0"
loguru = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
isort = "^5.13"
pytest-cov = "^3.0"
black = "^22.3"
mypy = "^0.950"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
